@@ -1,3 +1,8 @@
+2014-03-04  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Viewpoint.cpp:
+	* GeoViewpoint.cpp: 
+
 2014-03-03  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Geospatial.h:
