@@ -1,3 +1,7 @@
+2014-03-04  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Camera.h: 
+
 2014-03-03  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ReferenceEllipsoids.h: 
